k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-backend
  template:
    metadata:
      labels:
        app: notes-backend
    spec:
      containers:
        - name: backend
          image: prathamvish333/notes-backend:56
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
