k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-frontend
  template:
    metadata:
      labels:
        app: notes-frontend
    spec:
      containers:
        - name: frontend
          image: prathamvish333/notes-frontend:26
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
