k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-backend-service
spec:
  type: NodePort
  selector:
    app: notes-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30008
