k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-db
spec:
  selector:
    app: notes-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
