k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-frontend-service
spec:
  type: ClusterIP
  selector:
    app: notes-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
